fixup! left aligned

--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -5,3 +5,5 @@
     margin-left: 0;
     margin-right: 0;
 }
+
+.title span{ float:left }
